# nyxmon

./: .gitignore  .readthedocs.yaml  AGENTS.md  Architecture.md  CHANGELOG.md  CLAUDE.md  Procfile  README.md  check_states_card_design.html  check_states_combined_design.html  check_states_demo.html  commands.py  db.sqlite3  deployment_issue.md  justfile  package-lock.json  package.json  pyproject.toml  vitest.config.js
deploy/: deploy.yml  linux_macmini_deploy.yml  macos_deploy.yml  macos_remove.yml  macos_vars.yml  remove.yml  restore_database.yml  secrets.yml  secrets_production.yml  secrets_staging.yml  uv.yml  vars.yml
deploy/host_vars/: macmini.yml  production.yml  staging.yml
deploy/inventory/: hosts.yml
deploy/templates/: env.template.j2  monitor.plist.j2  monitor.service.j2  pyproject.toml.j2  systemd.service.j2  traefik.template.j2  webapp.plist.j2
django/: pyproject.toml
django/apps/nyxboard/: apps.py  forms.py  models.py  urls.py  views.py
django/apps/nyxboard/migrations/: 0001_initial.py  0002_remove_service_data_service_name.py  0003_remove_healthcheck_data_healthcheck_check_type_and_more.py  0004_healthcheck_check_interval.py
django/config/: asgi.py  urls.py  wsgi.py
django/config/settings/: base.py
django/docs/: frontend.md
django/static/css/: styles.css
django/templates/: base.html
django/templates/nyxboard/: dashboard.html  form_base.html  healthcheck_detail.html  healthcheck_list.html  service_confirm_delete.html  service_detail.html  service_list.html
docs/: Architecture.md  api.md  async-check-runner.md  concurrency-overview.md  conf.py  configuration.md  custom-ssh-json-checks.md  dns-check-examples.md  imap-checks.md  index.md  installation.md  json-metrics-check-examples.md  smtp-checks.md  usage.md
scripts/: add_check.py  llm_content.py  show_due_checks.py
src/django/config/: asgi.py  urls.py  wsgi.py  wsgi_proxy.py
src/nyxboard/: forms.py  models.py  urls.py  views.py
src/nyxboard/migrations/: 0009_healthcheck_data_alter_healthcheck_url.py  0010_alter_healthcheck_check_type.py
src/nyxmon/: bootstrap.py  devdata.py  startup_validation.py
tests/: agent_e2e_test.py  collector_e2e_test.py  conftest.py  e2e_test.py
tests/adapters/: test_sqlite_repo.py
tests/dashboard/: conftest.py  test_forms.py  test_views.py
tests/e2e/: cleaner_e2e_test.py  collector_e2e_test.py  e2e_test.py  test_dns_checks.py
tests/unit/: cleaner_test.py  models_test.py  test_async_runner_refactor.py  test_custom_executor.py  test_dns_config.py  test_dns_config_validation.py  test_dns_executor.py  test_dns_source_ip.py  test_executor_registry.py  test_http_executor.py  test_imap_config.py  test_imap_executor.py  test_json_metrics_config.py  test_json_metrics_executor.py  test_notification_dampening.py  test_notification_suppression.py  test_opsgate_notification.py  test_smtp_executor.py  test_startup_validation.py  test_tcp_config.py  test_tcp_executor.py
(+84 files in other folders)
