[project]
name = "nyxboard"
version = "0"  # this is an application without a version
requires-python = "==3.13.*"  # also tells uv which python version to fetch if none is installed
dependencies = [
    "django",
    "django-environ>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[dependency-groups]
dev = [
    "django-debug-toolbar",
]

[tool.uv.sources]
nyxmon = { path = "../" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nyxboard.settings"
python_files = "test_*.py"
